# pysqleet

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
_sqleet/: connection.c  connection.h  module.c  module.h  statement.h  util.c  util.h
sqleet/: __init__.py  dbapi2.py
