[metadata]
name = pysqleet
version = attr:sqleet:__version__

description = Drop in replacement for the std libs sqlite3 which enables encryption support for sqlite3
long_description = file:README.md
long_description_content_type =  test/markdown

author = Robert Kearns

keywords = sqlite, sqlite3, sqleet, db, database, encryption

license = MIT
license_file = LICENSE.txt

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: Database

[options]
python_requires = >=3.6